Se agregó servicios

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -10,10 +10,7 @@ body {
 }
 
 .body-content {
-    background-image: url('bkg5.jpg');
-    width: 100%;
-    background-repeat: no-repeat;
-    background-size: 100%;
+
 }
 
 /* Set padding to keep content from hitting the edges xxxx */
@@ -119,10 +116,37 @@ a.navbar-brand, ul.nav a {
 ul {
     list-style-image: url("validar2.jpg");
 }
-
+.derecha
+{
+    float: right;
+}
 
 
 img {
     width: 100%;
     height: auto;
+}
+.home {
+    height: 90vh;
+    background-image: url('bkg5.jpg');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+.services-box {
+    padding: 30px;
+    background-color: #212121;
+    border-left: 2px solid #292929;
+}
+
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+    font-weight: 100;
+    color: #fff;
+}
+
+.background2 {
+    background-color: #1d1d1d;
+}
+
+.text-small {
+    font-size: 16px;
 }
