--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -130,7 +130,7 @@ img {
     height: 90vh;
     background-image: url('bkg5.jpg');
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: 100%;
 }
 .services-box {
     padding: 30px;
